<?xml version="1.0"?>
<package>
  <name>davinci_bringup</name>
  <version>0.0.0</version>
  <description>The davinci_bringup package</description>

  <maintainer email="kdh@es.aau.dk">Karl Damkjær Hansen</maintainer>

  <license>GPLv3</license>

  <author email="kdh@es.aau.dk">Karl Damkjær Hansen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rviz</run_depend>
</package>

